apps/grep/environments/prod/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: apps--grep
  name: apps--grep
