apps/grep/environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grep
  namespace: apps--grep
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
      - grep.hz.metacpan.org
      - grep.metacpan.org
      secretName: grep-tls
  rules:
    - host: grep.hz.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grep
                port:
                  number: 80
    - host: grep.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grep
                port:
                  number: 80
